# YTKernel

./: .asm-lsp.toml  .gitattributes  .gitignore  Makefile  README.md  linker.ld  sim.sh
bootloader/: main.asm
journal/: Day1.md
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: main.rs
kernel/src/drivers/: mod.rs  traits.rs  util.rs
kernel/src/drivers/audio/: mod.rs  traits.rs
kernel/src/drivers/audio/ac97/: consts.rs  driver.rs  mod.rs
kernel/src/memory/: global.rs  mod.rs  pmm.rs
kernel/src/renderer/: bitmap.rs  drawing.rs  image.rs  mod.rs  video.rs
kernel/src/serial/: mod.rs  serialf.rs
