[package]
name = "kernel"
version = "0.2.2" # graphics & PMM, 2 commits
edition = "2024"

[dependencies]
heapless = "0.9.3"
itoa = "1.0.18"
minipng = { version = "0.1", default-features = false }

[profile.release]
panic = "abort"
lto = true # link-time optimization
debug = true            # Force cargo to generate symbols (-g) even in release mode
# debug-assertions = true # Keep panic/overflow checks active so allocation loops catch bugs
# overflow-checks = true  # Catch bad allocation math immediately

