[package]
name = "kernel"
version = "0.2.3" # Image support  & PNG, 3 commits
edition = "2024"

[dependencies]
embedded-graphics = "0.8.2"
heapless = "0.9.3"
itoa = "1.0.18"
minipng = { version = "0.1", default-features = false }
shiguredo_mp4 = { version = "2026.3.0", default-features = false }
tinybmp = "0.7.0"

[profile.release]
panic = "abort"
lto = true # link-time optimization
debug = true            # Force cargo to generate symbols (-g) even in release mode
# debug-assertions = true # Keep panic/overflow checks active so allocation loops catch bugs
# overflow-checks = true  # Catch bad allocation math immediately

